increased the z-index of control Units class in PlanetComponents as without it there was some issues with the Onclick event not working on some mobile devices

--- a/src/components/PlanetComponent.css
+++ b/src/components/PlanetComponent.css
@@ -56,6 +56,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    z-index: 100;
 }
 
 .planetSource {
